# mixer-tools

./: .gitignore  .travis.yml  Dockerfile  Gopkg.toml  Makefile  Makefile.am  Makefile.bats  Makefile.gobuild  README  README.md  README.vendor  action.yml  add-rpms.sh  afb.sh  autogen.sh  build-chroots.sh  configure.ac  create-update.sh  entrypoint.sh  go.mod  go.sum  helpers  how-to-make-a-release  init-mix.sh  init-versions.sh  pack-maker.sh  pack_maker.sh  superpack-maker.sh  swupd-add-pkg  update-bundles.sh  validate-swupd.sh  yum.conf.in
builder/: build_validate.go  builder.go  builder_test.go  bundle_control.go  bundle_control_test.go  bundle_validate.go  bundles.go  bundles_test.go  bundleset.go  bundleset_test.go  chroots.go  config.go  deltapacks.go  docker.go  docker_test.go  format.go  helpers.go  init.go  metadata.go  mixconfig.go  repo_control.go  stopwatch.go  update.go
config/: base.go  config.go  config_convert.go  configuration.go  mixconfig.go  mixconfig_convert.go  mixstate.go  state.go  state_convert.go
docs/: mixer.1  mixer.1.rst  mixer.add-rpms.1  mixer.add-rpms.1.rst  mixer.build.1  mixer.build.1.rst  mixer.bundle.1  mixer.bundle.1.rst  mixer.config.1  mixer.config.1.rst  mixer.init.1  mixer.init.1.rst  mixer.repo.1  mixer.repo.1.rst  mixer.reset.1  mixer.reset.1.rst  mixer.versions.1  mixer.versions.1.rst  mixin.1  mixin.1.rst
helpers/: helpers.go  helpers_test.go
log/: log.go
mcswupd/: main.go
mixer/: main.go
mixer-completion/: main.go
mixin/: build.go  helpers.go  main.go  package.go  repo.go  root.go  root_cmd.go
(+278 files in other folders)
