AC_PREREQ([2.68])
AC_INIT([mixer-tools],[1.00],[tudor.marcu@intel.com],[mixer-tools])
AM_INIT_AUTOMAKE([foreign silent-rules color-tests no-dist-gzip dist-xz])
AC_CONFIG_FILES([Makefile])
AC_PREFIX_DEFAULT(/usr/local)

PKG_PROG_PKG_CONFIG

AC_OUTPUT

AC_MSG_RESULT([
        mixer-tools $VERSION
        ========

        prefix:                 ${prefix}
        exec_prefix:            ${exec_prefix}
        bindir:                 ${bindir}
])
